
- The plugin manager no longer lists the JDK's "tools.jar" if it is
  loaded.

- The "Search in Directory" command now always selects the most recently
  searched in directory. To search in the current directory with the
  filter based on the current buffer's file name, click the
  "Synchronize" button.

- Updated "Preview Javadoc of Current Buffer" macro (Tom Gutwin).

}}}
{{{ Syntax Highlighting

- Added MoinMoin syntax highlighting (Ollie Rutherfurd).

- Added Relax NG compact syntax highlighting (Randy Hudson).

- Minor fix to Perl heredoc syntax highlighting (Chris Petersen).

- Updated ADPL syntax highlighting (Randolf Mock)

- Added Renderman-RIB syntax highlighting (Alessandro Falappa).

- Added PowerDynamo syntax highlighting (Ben Williams).

}}}
{{{ Bug Fixes

- Fixed NullPointerException on startup which prevented jEdit from
  loading if a corrupted JAR file was present in one of the jars
  directories.

- Dropping a file onto the text area did not work if the text area was
  read-only.

- On Windows, MiscUtilities.constructPath() would fail if the parent
  path was a URL and the child path started with a \.

- On Windows, MiscUtilities.constructPath() would return a path with a
  double backslash if the parent used / as a separator, and ended with a
  /.

- UTF16 files with a byte order mark were not being detected due to a
  regression in pre6.

- The history code now tries very hard not to write a malformed
  ~/.jedit/history file.

- Fixed a slowdown of 5-7 seconds on startup in some cases that results
  fromcalling GraphicsDevice.getConfigurations().

- The list of words in the "Complete Word" window was not sorted.

- Fixed a race condition where the text area would throw a
  NullPointerException if EditPane.setBuffer() was called twice in a row
  with buffers that were not yet loaded.

- Loading and unloading plugins that added menu items to the file system
  browser did not update the file system browser's "Plugins" menu.
