@@ -39,7 +39,7 @@ lineSep.mac=MacOS (\\r)
 
 #{{{ Miscellaneous
 encodings=ASCII Cp850 Cp1251 Cp1252 ISO8859_1 ISO8859_2 ISO8859_15 \
-	MacRoman Big5 GBK KOI8_R SJIS Unicode UTF8
+	MacRoman Big5 GBK KOI8_R SJIS UTF-16 UTF-8 UTF-8Y
 
 history.caption=Previously entered strings:
 
